# RaytracingRendering

./: .travis.yml  CMakeLists.txt  README.md  build.sh  sonar-project.properties
include/: Camera.hpp  ObjLoader.hpp  Ray.hpp  Shape.hpp  Triangle.hpp
src/: Camera.cpp  ObjLoader.cpp  Ray.cpp  Triangle.cpp  Triangle.cxx  main.cpp  main.cxx
